# braft-payload-test

./: CMakeLists.txt  README.md  client.cpp  payload.proto  run_client.sh  run_server.sh  server.cpp  stop.sh  test_batch.sh
